[package]
name = "temper-services"
version = "0.1.0"
edition = "2021"
description = "Shared business-logic + auth-infra layer for temper-api and temper-mcp"

[dependencies]
temper-core = { path = "../temper-core", features = ["web-api"] }
temper-workflow = { path = "../temper-workflow", features = ["web-api"] }
temper-substrate = { path = "../temper-substrate" }
# The embedder is already linked transitively via temper-substrate → temper-ingest(embed);
# naming it directly lets the search read-path embed a text-only query server-side (issue #297).
temper-ingest = { path = "../temper-ingest", features = ["embed"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "uuid", "migrate"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

[features]
test-db = []
# Gates tests that drive the server-side chunk+embed path (ONNX at runtime): the
# segmented-append `chunks_packed: None` branch. temper-services links ort unconditionally via
# temper-substrate → temper-ingest(embed), so only the runtime dylib is missing outside the
# Embed CI job. Run locally with ORT installed; CI runs it in "Embed & MCP Round-Trip Tests".
test-embed = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
