[package]
name = "temper-services"
version = "0.1.0"
edition = "2021"
description = "Shared business-logic + auth-infra layer for temper-api and temper-mcp"

[dependencies]
temper-auth = { path = "../temper-auth" }
temper-core = { path = "../temper-core", features = ["web-api"] }
temper-workflow = { path = "../temper-workflow", features = ["web-api"] }
temper-substrate = { path = "../temper-substrate" }
# The embedder is already linked transitively via temper-substrate → temper-ingest(embed);
# naming it directly lets the search read-path embed a text-only query server-side (issue #297).
# `default-features = false` for the same reason as temper-substrate: the default set drags in
# `extract` → kreuzberg → pdfium, which no server code path calls.
temper-ingest = { path = "../temper-ingest", default-features = false, features = ["embed"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "uuid", "migrate"] }
# `rt`+`time`: the search read-path runs the CPU-bound server-side query embed off the async
# executor (`spawn_blocking`) under a wall-clock budget (`timeout`) so a cold-instance model load
# can never hold the serverless request past its deadline — issue #427.
tokio = { version = "1", features = ["sync", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
# The Slack grant vault seals each stored refresh/access token with XChaCha20-Poly1305 (24-byte
# random nonce per row, so nonce reuse is a non-issue). Pure Rust, no OpenSSL — matches the
# rustls-only posture. `getrandom` backs the nonce/key RNG (`OsRng`).
chacha20poly1305 = "0.10"
# Path-segment encoding for the Connect mint URL — a connector uid is one
# url-encoded path segment (`github/acme` → `github%2Facme`).
percent-encoding = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

[features]
test-db = []
# Gates tests that drive the server-side chunk+embed path (ONNX at runtime): the
# segmented-append `chunks_packed: None` branch. temper-services links ort unconditionally via
# temper-substrate → temper-ingest(embed), so only the runtime dylib is missing outside the
# Embed CI job. Run locally with ORT installed; CI runs it in "Embed & MCP Round-Trip Tests".
test-embed = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
wiremock = "0.6"
