[package]
name = "temper-substrate"
version = "0.0.0"
edition = "2021"
publish = false

[features]
# Gates the SCENARIO write-path integration tests (bootseed/scenario_load/scenario_roundtrip). Each
# runs on an ephemeral `public`-schema database via `#[sqlx::test(migrator = "temper_substrate::MIGRATOR")]`.
# Needs a DB + ONNX (bge-768). Enabled by the Embed CI job; run locally: `cargo make test-artifacts`.
# Pure core tests (affinity, cluster) are ungated and run in CI.
artifact-tests = []
# Emit + snapshot-test the scenario JSON Schema from the loader structs (schemars derives).
scenario-schema = ["schemars", "temper-core/scenario-schema"]

[dependencies]
temper-core = { path = "../temper-core" }
temper-ingest = { path = "../temper-ingest", features = ["embed"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["uuid1"], optional = true }
anyhow = "1"
sha2 = "0.10"

# (No dev-dependencies: the WS6 chunk-3 parity tests that dev-depended on temper-api/temper-core were
# retired with synthesis at the endgame collapse.)
