[package]
name = "temper-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[features]
test-db = []

[package.metadata.cargo-machete]
ignored = ["base64", "rmp-serde", "serde_json"]

[dev-dependencies]
temper-api = { path = "../../crates/temper-api" }
temper-cli = { path = "../../crates/temper-cli" }
temper-client = { path = "../../crates/temper-client" }
temper-core = { path = "../../crates/temper-core" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "v7"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tempfile = "3"
base64 = "0.22"
rmp-serde = "1"
sha2 = "0.10"
hex = "0.4"
